<resources>
    <string name="app_name">Tech News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_fragment_text">settings_fragment_text</string>
    <string name="details">Details</string>
    <string name="media_thumbnail">media_thumbnail</string>
    <string name="settings">Settings</string>
    <string name="settings_page_info">This is a settings page.</string>
    <string name="about_page_info">This is a global about page.</string>
    <string name="this_is_a_search_fragment">This is a search fragment.</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="about">About</string>
    <string name="about_me">About me</string>
    <string name="personal_info_page">This is a personal info page.</string>
    <string name="personal_info">I am an electronics engineer who really loves coding.</string>
    <string name="personal">Personal</string>
    <string name="github">GitHub</string>

    <!-- Hyperlink -->
    <string name="hyperlink_github"> <a href="https://github.com/recfr/">GitHub</a></string>
    <string name="hyperlink_medium"> <a href="https://recepfirincioglu.medium.com">Medium</a></string>
    <string name="hyperlink_linkedin"> <a href="https://www.linkedin.com/in/recepfirincioglu/">LinkedIn</a></string>
    <string name="avatar">avatar</string>


</resources>